# extended

./: extended.cabal  stack.yaml
src/Extended/Control/: Concurrent.hs  Eff.hs  Lens.hs
src/Extended/Control/Eff/: Lift.hs  Operational.hs
src/Extended/Control/Eff/Reader/: Strict.hs
src/Extended/Control/Eff/State/: Strict.hs
src/Extended/Control/Monad/: Except.hs  Logger.hs  RSE.hs
src/Extended/Data/: Aeson.hs  Word.hs
src/Extended/Debug/: Trace.hs
src/Extended/Language/Haskell/: TH.hs
src/Extended/Network/: Socket.hs
src/Extended/System/: Exit.hs
tests/: Test.hs
