name:                extended
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MadailicaiTech/extended#readme
license:             BSD3
license-file:        LICENSE
author:              li ming
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag no_trace
  description: disable trace
  default:    False

library
  hs-source-dirs:      src
  exposed-modules:     Extended.Control.Lens
                       Extended.Control.Concurrent
                       Extended.Control.Eff
                       Extended.Control.Eff.Lift
                       Extended.Control.Eff.Operational
                       Extended.Control.Eff.Reader.Strict
                       Extended.Control.Eff.State.Strict
                       Extended.Control.Monad.Except
                       Extended.Control.Monad.Logger
                       Extended.Control.Monad.RSE
                       Extended.Data.Aeson
                       Extended.Data.Word
                       Extended.Debug.Trace
                       Extended.Language.Haskell.TH
                       Extended.Network.Socket
                       Extended.System.Exit
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , aeson-casing
                     , aeson-injector
                     , bytestring
                     , containers
                     , data-dword
                     , exceptions
                     , extensible-effects
                     , formatting
                     , lens
                     , lens-aeson
                     , monad-logger
                     , mtl
                     , network
                     , NoTrace
                     , string-conv
                     , template-haskell
                     , text
                     , thyme
  default-language:    Haskell2010
  if flag(no_trace)
    cpp-options: -DNO_TRACE

source-repository head
  type:     git
  location: https://github.com/MadailicaiTech/extended
